tests/evaluator/should_pass/non_rect.csp
datatype C = D.{0..2} | E.Bool | K.{0,1}.Bool
datatype G = F.{D.0, D.1, E.false,K.0.false}
datatype X = Y.G

test1 = (D.0) != (D.1)
test2 = productions(F.D) == {F.D.0, F.D.1}
test3 = productions(Y.F.D) == {Y.F.D.0, Y.F.D.1}
test4 = productions(Y.F.E) == {Y.F.E.false}
test5 = extensions(D) == {0,1,2}
test6 = extensions(E) == {true, false}
test7 = extensions(D) == {0,1,2}

test11 = extensions(F) == {D.0, D.1, E.false, K.0.false}
test12 = productions(Y.F) == {Y.F.D.0, Y.F.D.1, Y.F.E.false, Y.F.K.0.false}
