tests/evaluator/should_fail/non_rect.csp
datatype C = D.{0..2} | E.Bool
datatype G = F.{D.0, D.1, E.false}

test11 = extensions(F) == {}
